# ATLAS

./: .gitattributes  .gitignore  ATLAS_manual_071615.md  Dockerfile  README.md  docker-compose.yml  mutant_checker_table_fix.txt  pyproject.toml
rosetta/: .gitignore
scoring/: LOOCV.py  Mutants_052016.txt  Mutants_052915.tsv  build_models.py  build_models_backrub.py  build_models_quick.py  build_models_score12.py  cor_score12.py  count_RMSD_validation_set.R  count_RMSD_validation_set.py  energy_table.py  energy_table.tsv  energy_table_backrub.tsv  energy_table_ddG.txt  energy_table_ddG_backrub.tsv  energy_table_score12.py  feature_analysis.py  feature_analysis_ddG.py  linear_reg.py  linear_reg_ddG.py  linear_reg_functions.py  linear_reg_old.py  lr_test.py  make_energy_table_ddG_backrub.py  mutant_checker.py  my_truncate_tcr_complexes.pl  regressor_corr.R  test.txt
scoring/rotamer_analysis/: build_models_validation_set.py  point_mutant_rotamer_analysis.py  test.py
www/: 3D_viewer.php  3D_viewer_designed.php  help.php  index.php  my_css.css  resources.html  search_results.php  search_results_pdb.php
www/scoring/: build_models_backrub.py  build_models_quick.py  build_models_score12.py  cor_score12.py  count_RMSD_validation_set.R  count_RMSD_validation_set.py  lr_test.py  mutant_checker.py  plot_score12_results.py  proteindatabank.py  regressor_corr.R
www/tables/: ATLAS.tsv  results_table.php
www/web/: 3D_viewer.php  3D_viewer_designed.php  ATLAS_functions.php  contact.html  create_atlas.php  downloads.php  help.php  index.php  main.css  references.html  search.php  (+2 more)
(+3 files in other folders)
