[tool.poetry]
name = "atlas"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "~3.9"
matplotlib = "^3.5"
numpy = "^1.22"
pandas = "^1.4"
pyrosetta = { file = "./rosetta/pyrosetta-2022.23+release.f1e0f6d-cp39-cp39-linux_x86_64.whl" }
rosetta = "^0.3"
scikit-learn = "^1.1"
statsmodels = "^0.13"

[tool.poetry.dev-dependencies]
black =  "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
